--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             </h2>
             <div class="int-div flx">
                 <div>
-                    <img src="/img/hng-logo.png" alt="hng-Logo" width="200"/> <br>
-                    <a href="https://hng.tech/">HNG Internship Website</a>
+                    <img src="/img/hng-logo.png" alt="hng-Logo" width="250"/> <br>
+                    <a href="https://hng.tech/">HNG Internship Website: https://hng.tech/</a>
                 </div>
                 <div>
-                    <img src="/img/i4g-logo.png" alt="14g-Logo" width="200"/> <br>
-                    <a href="https://hng.tech/">Ingresive for Good Website</a>
+                    <img src="/img/i4g-logo.png" alt="14g-Logo" width="250"/> <br>
+                    <a href="https://ingressive.org/">Ingressive for Good Website: https://ingressive.org/</a>
                 </div>
                 <div>
-                    <img src="/img/zuri-logo.jpeg" alt="zuri-Logo" width="200"/> <br>
-                    <a href="https://hng.tech/">Zuri Internship Website</a>
+                    <img src="/img/zuri-logo.jpeg" alt="zuri-Logo" width="250"/> <br>
+                    <a href="https://training.zuri.team/">Zuri Internship Website: https://training.zuri.team/</a>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
         <div class="proj">
             <h2>
                 <span class="txt-col">05.</span>
-                <span class="sect">Projects</span>
+                <span class="sect">Some Projects</span>
             </h2>
             <dl class="proj-div">
                 <dt>Four Card Feather Section</dt>
