--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <div class="intro-text">
             <h1>My name is <span id="myName">Adetoun</span></h1>
-            <p>An innovative Front-End Developer with about 3 years’ experience building and maintaining
+            <p>An innovative Front-End Developer with about 4 years’ experience building and maintaining
                 responsive websites. Proficient in HTML, CSS and JavaScript plus, modern libraries and
                 frameworks. Passionate about usability and possess working knowledge Adobe Photoshop.
             </p>
@@ -58,7 +58,18 @@
             </h2>
             <div class="exp-dv flx">
                 <div class="exp-dv-sec1">
-                    <p>Jan 2018 - Present</p>
+                    <p>Jan 2021 - Present</p>
+                </div>
+                <div class="exp-dv-sec2">
+                    <h3>DuroNetworks
+                    <span class="col">Frontend Engineer </span></h3>
+                    <p>Converting Mockups to actual code with Material UI, Styled Components, Tailwind CSS</p>
+                    <p>Fetching, Consuming APIs and DOM Manipulation with React/Redux, Nextjs </p>
+                </div>
+            </div>
+            <div class="exp-dv flx">
+                <div class="exp-dv-sec1">
+                    <p>Jan 2018 - 2021</p>
                 </div>
                 <div class="exp-dv-sec2">
                     <h3>Supreme Education Foundation Schools</h3>
@@ -75,7 +86,7 @@
                     <h3>Tech 9
                     <span class="col">Frontend Developer (Remote)</span></h3>
                     <p>Converting Mockups to actual code</p>
-                    <p>Fetching, Consuming APIs and DOM Manipulation. VueJS, Angular etc</p>
+                    <p>Fetching, Consuming APIs and DOM Manipulation with VueJS, Tailwind CSS, Nextjs </p>
                 </div>
             </div>
             <div class="exp-dv flx">
@@ -151,9 +162,9 @@
             </div>
             <div class="skills-dv2">
                 <div>
-                    <h4>Angular JS</h4>
+                    <h4>Next JS</h4>
                     <div class="sk-dv">
-                        <div class="skill angular"></div>
+                        <div class="skill next"></div>
                     </div>
                 </div>
                 <div>
@@ -244,7 +255,11 @@
                 </div>
             </div>
         </div>
+        
     </section>
+    <footer>
+        <p> Adetoun Olayemi &copy; 2021 </p>
+    </footer>
     <script src="/script.js"></script>
 
 </body>
