--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                         <div class="skill react"></div>
                     </div>
                 </div>
+                <div>
+                    <h4>Redux</h4>
+                    <div class="sk-dv">
+                        <div class="skill redux"></div>
+                    </div>
+                </div>
             </div>
             <div class="skills-dv2">
                 <div>
