--- a/index.html
+++ b/index.html
@@ -212,18 +212,29 @@
                 <span class="sect">Some Projects</span>
             </h2>
             <dl class="proj-div">
-                <dt>Four Card Feather Section</dt>
-                <dd><a href="https://valenteeena.github.io/project2/index.html">https://valenteeena.github.io/project2/index.html</a></dd>
-                <dt>Base Apparel Coming Soon Page</dt>
-                <dd><a href="https://valenteeena.github.io/Project%201/index.html">https://valenteeena.github.io/Project%201/index.html</a></dd>
-                <dt>Pricing Component with Toggle</dt>
-                <dd><a href="https://valenteeena.github.io/project6/index.html">https://valenteeena.github.io/project6/index.html</a></dd>
-                <dt>Project Tracking Intro Component</dt>
-                <dd><a href="https://valenteeena.github.io/project3/index.html">https://valenteeena.github.io/project3/index.html</a></dd>
-                <dt>APIN Health portal</dt>
-                <dd><a href="https://jobapplication.apin.org.ng/application/index.php">https://jobapplication.apin.org.ng/application/index.php</a></dd>
+                <dt>Personal Project Portfoli</dt>
+                <dd><a href="https://valenteeena.github.io/Adetoun/index.html">valenteeena.github.io/Adetoun/index.html</a></dd>
                 <dt>ORION Invest</dt>
-                <dd><a href="https://orioninvest.netlify.app/">https://orioninvest.netlify.app/</a></dd>
+                <dd><a href="https://orioninvest.netlify.app/">orioninvest.netlify.app/</a></dd>
+                <dt>Zuri Team Aphrodite Landing page</dt>
+                <dd><a href="https://zuri-landing-page-aphrodite.netlify.app/">zuri-landing-page-aphrodite.netlify.app/</a></dd>
+                <dt>Vuejs Image Uploader / Editor</dt>
+                <dd><a href="https://image-editor-chi.vercel.app/">https://image-editor-chi.vercel.app/</a></dd>
+                <dt>House of Law Website</dt>
+                <dd><a href="https://house-of-law-website.vercel.app/">house-of-law-website.vercel.app/</a></dd>
+                <dt>Zuri Final project: MyHelperNG</dt>
+                <dd><a href="https://myhelperng.netlify.app/">myhelperng.netlify.app/</a></dd>
+                <dt>Four Card Feather Section</dt>
+                <dd><a href="https://valenteeena.github.io/project2/index.html">valenteeena.github.io/project2/index.html</a></dd>
+                <dt>Base Apparel Coming Soon Page</dt>
+                <dd><a href="https://valenteeena.github.io/Project%201/index.html">valenteeena.github.io/Project%201/index.html</a></dd>
+                <dt>Pricing Component with Toggle</dt>
+                <dd><a href="https://valenteeena.github.io/project6/index.html">valenteeena.github.io/project6/index.html</a></dd>
+                <dt>Project Tracking Intro Component</dt>
+                <dd><a href="https://valenteeena.github.io/project3/index.html">valenteeena.github.io/project3/index.html</a></dd>
+                <dt>APIN Health portal</dt>
+                <dd><a href="https://jobapplication.apin.org.ng/application/index.php">jobapplication.apin.org.ng/application/index.php</a></dd>
+                
             </dl>
         </div>
 
